fix: update footer link colors from #7C7D75(primary) to  to #332E05 (footer-background-color)to improve contrast ratio

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,6 +7,7 @@ $button-color: #DD700B;
 $button-color-hover: #763c05;
 $text-dark-color: #1F2421;
 $text-white-color: #D9E1E1;
+$footer-background-color: #332E05;
 
 // Typography Variables
 $headings-font: 'Manrope', Helvetica, Arial, sans-serif;
