--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -73,6 +73,7 @@ h4 {
 
 p {
   font-size: $paragraph-size-mobile;
+ font-family: $paragraph-font;
 
   @media (min-width: $breakpoint-md) {
     font-size: $paragraph-size-desktop;
@@ -207,7 +208,6 @@ p {
 
 .bento-item--info {
   background-color: $secondary-color;
-
 }
 
 .bento-header {
@@ -270,6 +270,7 @@ p {
 }
 
 .quicklink-text {
+  font-family: $paragraph-font;
   font-size: $paragraph-size-mobile;
   font-weight: 500;
   color: $text-dark-color;
@@ -453,13 +454,11 @@ a.link {
   }
 }
 
-
-
 // Footer
 .footer {
   padding: $spacing-lg $spacing-md;
   margin-top: $spacing-xl;
-  background-color: $primary-color;
+  background-color: $footer-background-color;
   color: $text-white-color;
 }
 
@@ -495,6 +494,7 @@ a.link {
   font-family: $headings-font;
   font-size: $paragraph-size-mobile;
   font-weight: 600;
+  color: $text-white-color;
 
   @media (min-width: $breakpoint-md) {
     font-size: 1.25rem;
@@ -541,7 +541,7 @@ a.link {
   border-top: 0.0625rem solid rgba($text-white-color, 0.2);
   text-align: center;
   font-size: $paragraph-size-mobile;
-  color: rgba($text-white-color, 0.7);
+  color: $text-white-color;
 
   @media (min-width: $breakpoint-md) {
     font-size: $paragraph-size-desktop;
